--- a/src/Components/CodeBlock/CodeBlock.css
+++ b/src/Components/CodeBlock/CodeBlock.css
@@ -2,11 +2,16 @@
     box-shadow: var(--code_blocks_shadow);
     width: 60%;
     min-width: fit-content;
+    border-radius: 6px;
+    overflow: hidden;
+    margin: 10px 0;
+
 }
 
 .code_line_container{
     padding:5px 15px;
-    border-radius: 6px;
+    background-color: var(--dark_gray1);
+    display: flex;
 }
 
 
@@ -28,4 +33,8 @@
 .copy_button:active{
     background-color: var(--white_font_color);
     color: var(--code_blocks) !important;
+}
+
+.guide_span_bottom{
+    margin-bottom: 15px;
 }
