--- a/src/Components/HoverPicture/Hover.css
+++ b/src/Components/HoverPicture/Hover.css
@@ -1,6 +1,15 @@
 .hover_image_component{
     display: none;
+
+
+}
+
+.sameline_image{
+    display: inline-block;
+    margin-left: 15px;
+}
+
+.hover_image_component_image{
     position: absolute;
     right: 2rem;
-    top: 2rem;
 }
