--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,44 +1,3 @@
-.mid_container{
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);   
-    width: 1000px;
-    background-color: var(--dark_gray);
-    border-radius: 6px;
-    padding: 2rem;
-    margin-bottom: 7rem;
-}
-
-
-.guide_title{
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);   
-    width: 1000px;
-    padding: 1rem 0;
-}
-
-.hover_image_containers{
-    cursor: pointer;
-    color: var(--ligher_text_color);
-}
-
-.hover_image_containers:hover > .hover_image_component{
-    display: block;
-
-}
-
-.guide_part_block{
-
-}
-
-.guide_part_block_header{
-    font-size: 2rem;
-}
-
-.guide_bottom_discription{
-    margin-top: 1rem;
-}
-.guide_span{
-    display: block;
+.transparent_back{
+    background-color: transparent;
 }
