--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,23 @@ body{
   --white_font_color:#dfe6f4;
   --ligher_text_color:#90e0f8;
 }
+
+.mid_container{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);   
+  width: 1000px;
+  background-color: var(--dark_gray);
+  border-radius: 6px;
+  padding: 2rem;
+  margin-bottom: 7rem;
+}
+
+
+.page_title{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);   
+  width: 1000px;
+  padding: 1rem 0;
+}
