--- a/client/src/Components/Guides/Guides.css
+++ b/client/src/Components/Guides/Guides.css
@@ -1,9 +1,9 @@
 .guide_container{
     width: 330px;
-    height: auto;
+    height: fit-content;
     background-color: var(--dark_gray);
-    float: left;
-    margin: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
     cursor: pointer;
     border-radius: 6px;
 }
@@ -23,9 +23,20 @@
     padding-left: 10px;
     margin: 10px 0px;
     display: block;
+    
 }
 
 
-a{
+.no-decoration{
     color: inherit;
+    text-decoration: none;  
+}
+
+
+
+@media (max-width:350px) {
+    .guide_container{
+        width: 100%;
+    }
+    
 }
